--- a/RawDataCollection.ipynb
+++ b/RawDataCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2b263395",
+   "id": "76474c7a",
    "metadata": {},
    "source": [
     "# Extraction from video frames"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "85fa249a",
    "metadata": {},
    "outputs": [],
@@ -98,16 +98,102 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af8eb661",
+   "id": "5d6ad29b",
    "metadata": {},
    "source": [
     "# Web Scraping"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9700d2ff",
+   "metadata": {},
+   "source": [
+    "### Download from saved urls"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d64a6b9c",
+   "execution_count": 21,
+   "id": "cc652e8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image_0 has been scraped\n",
+      "image_1 has been scraped\n",
+      "image_2 has been scraped\n",
+      "image_3 has been scraped\n",
+      "image_4 has been scraped\n",
+      "image_5 has been scraped\n",
+      "image_6 has been scraped\n",
+      "image_7 has been scraped\n",
+      "image_8 has been scraped\n",
+      "image_9 has been scraped\n",
+      "image_10 has been scraped\n",
+      "image_11 has been scraped\n",
+      "image_12 has been scraped\n",
+      "image_13 has been scraped\n",
+      "image_14 has been scraped\n",
+      "image_15 has been scraped\n",
+      "image_16 has been scraped\n",
+      "image_17 has been scraped\n",
+      "image_18 has been scraped\n",
+      "image_19 has been scraped\n",
+      "image_20 has been scraped\n",
+      "image_21 has been scraped\n",
+      "image_22 has been scraped\n",
+      "image_23 has been scraped\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download image objects\n",
+    "counter = 0\n",
+    "# iterates over each dictionary object in \"image_links\" list\n",
+    "for image_object in image_links:\n",
+    "    #Create a new .png image file\n",
+    "    try:\n",
+    "        # opens a new file in write mode from filename constructed from image title\n",
+    "        filename = f\"image_{counter}\"\n",
+    "        counter += 1\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error occured while assigning filenames: {e}\")\n",
+    "    \n",
+    "    try:\n",
+    "        with open(f\"./Dataset/ScrapedImages/{filename}.png\", \"wb\") as file:\n",
+    "            # sends HTTP GET request to the image link specified in the current \"image_object\"\n",
+    "            # uses httpx.get() to fetch image from its URL\n",
+    "            image = httpx.get(image_object[\"link\"])\n",
+    "            # Save the image binary data into the file\n",
+    "            file.write(image.content)\n",
+    "            print(f\"{filename} has been scraped\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error occured while downloading the image: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a41ceea",
+   "metadata": {},
+   "source": [
+    "### Without Drivers for Static Pages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "306ef1eb",
+   "metadata": {},
+   "source": [
+    "Extraction from id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a8b86490",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fee29ba4",
+   "id": "adc26a29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +213,10 @@
     "\n",
     "# Initializes empty list called \"image_links\" where the scraped image links and titles will be stored\n",
     "image_links = []\n",
+    "\n",
+    "# Parent ids that identifies each image \n",
+    "parent_div_ids = [\"Lun_Dhwākhā_(Golden_Gate)\", ]\n",
+    "\n",
     "# Specifies the number of pages to scrape\n",
     "numberOfPages = 4\n",
     "#Scrape the first n pages\n",
@@ -153,57 +243,87 @@
     "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
     "    # Selects all HTML elements with the class \"row\" and \"product\" within \"<div>\" tag. \n",
     "    # Assumes that each product on the webpage is contained within a \"<div>\" element with these classes\n",
-    "    for image_box in soup.select(\"div.row.product\"):\n",
-    "        # For each selected product, it extracts the image link(\"src\" attribute of the \"<img>\" tag)\n",
-    "        # and the title(text content of the \"<h3\" tag) and stores them in a dictionary named \"result\"\n",
-    "        result = {\n",
-    "            \"link\": image_box.select_one(\"img\").attrs[\"src\"],\n",
-    "            \"title\": image_box.select_one(\"h3\").text,\n",
-    "        }\n",
-    "        #Append each image and title to the result array\n",
-    "        image_links.append(result)"
+    "    \n",
+    "    # Iterate over each id\n",
+    "    for parent_div_id in parent_div_ids:\n",
+    "        for image_box in soup.select(f\"div[id^='{parent_div_id}']\"):\n",
+    "            # For each selected product, it extracts the image link(\"src\" attribute of the \"<img>\" tag)\n",
+    "            # and the title(text content of the \"<h3\" tag) and stores them in a dictionary named \"result\"\n",
+    "            result = {\n",
+    "                \"link\": image_box.select_one(\"img\").attrs[\"src\"],\n",
+    "                \"title\": image_box.select_one(\"h3\").text,\n",
+    "            }\n",
+    "            #Append each image and title to the result array\n",
+    "            image_links.append(result)\n",
+    "\n",
+    "print(image_links)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "671259e2",
+   "metadata": {},
+   "source": [
+    "Extraction from picture element"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a7c1b415",
+   "execution_count": 20,
+   "id": "b7bac9ec",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './images/Box of Chocolate Candy.png'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Download image objects\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m image_object \u001b[38;5;129;01min\u001b[39;00m image_links:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;66;03m#Create a new .png image file\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./images/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mimage_object[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      5\u001b[0m         image \u001b[38;5;241m=\u001b[39m httpx\u001b[38;5;241m.\u001b[39mget(image_object[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlink\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;66;03m# Save the image binary data into the file\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    284\u001b[0m     )\n\u001b[1;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './images/Box of Chocolate Candy.png'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/bhaktapur.com_logo.png.webp', 'title': ''}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/Golden-gate--scaled.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-817x1024.jpg.webp 817w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-239x300.jpg.webp 239w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-768x963.jpg.webp 768w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-1226x1536.jpg.webp 1226w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-600x752.jpg.webp 600w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89.jpg.webp 1634w', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/Golden-gate--683x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5509-bhaktapur-durbar-square-palais-royal-golden-gate-detail.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5511-bhaktapur-durbar-square-palais-royal-golden-gate-detail-683x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5510-bhaktapur-durbar-square-palais-royal-golden-gate-detail.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-817x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/IMG_6138-1024x683.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/IMG_6139-1024x683.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/golden-gate-817x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/bhaktapurlogo-white.png.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/bhaktapur.com_logo.png.webp', 'title': ''}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/Golden-gate--scaled.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-817x1024.jpg.webp 817w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-239x300.jpg.webp 239w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-768x963.jpg.webp 768w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-1226x1536.jpg.webp 1226w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-600x752.jpg.webp 600w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89.jpg.webp 1634w', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/Golden-gate--683x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5509-bhaktapur-durbar-square-palais-royal-golden-gate-detail.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5511-bhaktapur-durbar-square-palais-royal-golden-gate-detail-683x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5510-bhaktapur-durbar-square-palais-royal-golden-gate-detail.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-817x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/IMG_6138-1024x683.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/IMG_6139-1024x683.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/golden-gate-817x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/bhaktapurlogo-white.png.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}]\n"
      ]
     }
    ],
    "source": [
-    "# Download image objects\n",
+    "# Find image links on the website\n",
     "\n",
-    "# iterates over each dictionary object in \"image_links\" list\n",
-    "for image_object in image_links:\n",
-    "    #Create a new .png image file\n",
+    "\n",
+    "# Initializes empty list called \"image_links\" where the scraped image links and titles will be stored\n",
+    "image_links = []\n",
+    "urls = [\"https://www.bhaktapur.com/discover/nyatapola-temple/\", \"https://www.bhaktapur.com/facts-about-nyatapola-temple/\"]\n",
+    "response = httpx.get(url) \n",
+    "soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "\n",
+    "for url in urls:\n",
+    "    # selects all <picture> elements on the page and iterates through\n",
+    "    for picture_tag in soup.select(\"picture\"):\n",
+    "        # Looks for a <source> tag inside it, if found, extracts the \"srcset\" attribute and\n",
+    "        # if not found, looks for an <img> tag and extracts the \"src\" attribute else move on\n",
     "    \n",
-    "    # opens a new file in write mode from filename constructed from image title\n",
-    "    with open(f\"./Dataset/ScrapedIm{image_object['title']}.png\", \"wb\") as file:\n",
-    "        # sends HTTP GET request to the image link specified in the current \"image_object\"\n",
-    "        # uses httpx.get() to fetch image from its URL\n",
-    "        image = httpx.get(image_object[\"link\"])\n",
-    "        # Save the image binary data into the file\n",
-    "        file.write(image.content)\n",
-    "        print(f\"Image {image_object['title']} has been scraped\")"
+    "        # Find the source element within each picture tag\n",
+    "        source_tag = picture_tag.select_one(\"source\")\n",
+    "        if source_tag:\n",
+    "            # Extract the source url\n",
+    "            source_url = source_tag.attrs.get(\"srcset\", \"\")\n",
+    "        else:\n",
+    "            # If source tag is not found, try to get the img tag\n",
+    "            img_tag = picture_tag.select_one(\"img\")\n",
+    "            if img_tag:\n",
+    "                # Extract the image URL\n",
+    "                source_url = img_tag.attrs.get(\"src\", \"\")\n",
+    "            else:\n",
+    "                # Skip if neither source not img tag is found\n",
+    "                continue\n",
+    "        # Extract title if available from h3(?)\n",
+    "        title = picture_tag.find_previous(\"h1\").text.strip() if picture_tag.find_previous(\"h1\") else \"\"\n",
+    "    \n",
+    "        # Append the image link and title to the result array\n",
+    "        image_links.append({\"link\": source_url, \"title\": title})\n",
+    "\n",
+    "print(image_links)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e798190",
+   "id": "80b7e611",
    "metadata": {},
    "outputs": [],
    "source": []
