data collection through scraping complete

--- a/RawDataCollection.ipynb
+++ b/RawDataCollection.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "cc652e8d",
    "metadata": {},
    "outputs": [
@@ -122,36 +122,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "image_0 has been scraped\n",
-      "image_1 has been scraped\n",
-      "image_2 has been scraped\n",
-      "image_3 has been scraped\n",
-      "image_4 has been scraped\n",
-      "image_5 has been scraped\n",
-      "image_6 has been scraped\n",
-      "image_7 has been scraped\n",
-      "image_8 has been scraped\n",
-      "image_9 has been scraped\n",
-      "image_10 has been scraped\n",
-      "image_11 has been scraped\n",
-      "image_12 has been scraped\n",
-      "image_13 has been scraped\n",
-      "image_14 has been scraped\n",
-      "image_15 has been scraped\n",
-      "image_16 has been scraped\n",
-      "image_17 has been scraped\n",
-      "image_18 has been scraped\n",
-      "image_19 has been scraped\n",
-      "image_20 has been scraped\n",
-      "image_21 has been scraped\n",
-      "image_22 has been scraped\n",
-      "image_23 has been scraped\n"
+      "image_555 has been scraped\n",
+      "image_556 has been scraped\n",
+      "image_557 has been scraped\n",
+      "image_558 has been scraped\n",
+      "image_559 has been scraped\n",
+      "image_560 has been scraped\n",
+      "image_561 has been scraped\n",
+      "image_562 has been scraped\n",
+      "image_563 has been scraped\n",
+      "image_564 has been scraped\n"
      ]
     }
    ],
    "source": [
     "# Download image objects\n",
-    "counter = 0\n",
+    "counter = 555\n",
     "# iterates over each dictionary object in \"image_links\" list\n",
     "for image_object in image_links:\n",
     "    #Create a new .png image file\n",
@@ -192,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a8b86490",
    "metadata": {},
    "outputs": [],
@@ -203,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "adc26a29",
    "metadata": {},
    "outputs": [],
@@ -269,29 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b7bac9ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/bhaktapur.com_logo.png.webp', 'title': ''}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/Golden-gate--scaled.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-817x1024.jpg.webp 817w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-239x300.jpg.webp 239w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-768x963.jpg.webp 768w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-1226x1536.jpg.webp 1226w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-600x752.jpg.webp 600w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89.jpg.webp 1634w', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/Golden-gate--683x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5509-bhaktapur-durbar-square-palais-royal-golden-gate-detail.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5511-bhaktapur-durbar-square-palais-royal-golden-gate-detail-683x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5510-bhaktapur-durbar-square-palais-royal-golden-gate-detail.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-817x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/IMG_6138-1024x683.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/IMG_6139-1024x683.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/golden-gate-817x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/bhaktapurlogo-white.png.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/bhaktapur.com_logo.png.webp', 'title': ''}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/Golden-gate--scaled.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-817x1024.jpg.webp 817w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-239x300.jpg.webp 239w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-768x963.jpg.webp 768w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-1226x1536.jpg.webp 1226w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-600x752.jpg.webp 600w, https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89.jpg.webp 1634w', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/Golden-gate--683x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5509-bhaktapur-durbar-square-palais-royal-golden-gate-detail.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5511-bhaktapur-durbar-square-palais-royal-golden-gate-detail-683x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/nepal-20171122-5510-bhaktapur-durbar-square-palais-royal-golden-gate-detail.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/collection-by-bkt.com-89-817x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/IMG_6138-1024x683.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/IMG_6139-1024x683.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/golden-gate-817x1024.jpg.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}, {'link': 'https://www.bhaktapur.com/wp-content/uploads/2020/03/bhaktapurlogo-white.png.webp', 'title': 'Golden gate; an alluring masterpiece of Bhaktapur Durbar Square'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find image links on the website\n",
     "\n",
     "\n",
     "# Initializes empty list called \"image_links\" where the scraped image links and titles will be stored\n",
     "image_links = []\n",
-    "urls = [\"https://www.bhaktapur.com/discover/nyatapola-temple/\", \"https://www.bhaktapur.com/facts-about-nyatapola-temple/\"]\n",
-    "response = httpx.get(url) \n",
-    "soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "urls = [\"https://www.bhaktapur.com/discover/nyatapola-temple/\", \"https://www.bhaktapur.com/discover/golden-gate/\"]\n",
     "\n",
     "for url in urls:\n",
+    "    \n",
+    "    response = httpx.get(url) \n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "\n",
     "    # selects all <picture> elements on the page and iterates through\n",
     "    for picture_tag in soup.select(\"picture\"):\n",
     "        # Looks for a <source> tag inside it, if found, extracts the \"srcset\" attribute and\n",
@@ -321,9 +301,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "444271de",
+   "metadata": {},
+   "source": [
+    "All the images from the site provided"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "be70704e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 10 image links on the webpage.\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_links = []\n",
+    "url = \"https://www.alamy.com/stock-photo/nyatapola.html?sortBy=relevant\"\n",
+    "response = httpx.get(url)\n",
+    "soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "img_tags = soup.find_all(\"img\")\n",
+    "\n",
+    "for img_tag in img_tags:\n",
+    "    src = img_tag.get(\"src\")\n",
+    "    if src:\n",
+    "        image_links.append({\"link\":src, \"title\": \"\"})\n",
+    "print(f\"Found {len(image_links)} image links on the webpage.\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b7e611",
+   "id": "6bc5844d",
    "metadata": {},
    "outputs": [],
    "source": []
