First successful run

--- a/PretrainedModel.ipynb
+++ b/PretrainedModel.ipynb
@@ -8,8 +8,18 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
+    "import six.moves.urllib as urllib\n",
+    "import sys\n",
+    "import tarfile\n",
     "import tensorflow as tf\n",
-    "import keras"
+    "import zipfile\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "from io import StringIO\n",
+    "from matplotlib import pyplot as plt\n",
+    "from PIL import Image\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -56,6 +66,18 @@
     "     - train.py\n",
     " \n",
     " 8. Demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a2b18ad6-890c-44df-af5a-096de09bc72e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from object_detection.utils import ops as utils_ops\n",
+    "from object_detection.utils import label_map_util\n",
+    "from object_detection.utils import visualization_utils as vis_util"
    ]
   },
   {
