conversion of annotations of xywh format

--- a/DL/keras_cv/prepare_ds.ipynb
+++ b/DL/keras_cv/prepare_ds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "2415e9d8-b68f-47b7-b7b1-09632788855e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "id": "f4a26a95-db71-491c-bd39-b037bbf61337",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_and_convert_annotations(annotations_file, output_file):\n",
+    "  with open(annotations_file, 'r') as f:\n",
+    "    annotations = json.load(f)\n",
+    "\n",
+    "  xywh_annotations = convert_coco_to_xywh(annotations)\n",
+    "\n",
+    "  with open(output_file, 'w') as f:\n",
+    "    json.dump(xywh_annotations, f, indent=2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "96d16172-c09b-4a19-a970-76bf81ac8bbf",
    "metadata": {},
    "outputs": [],
@@ -42,22 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "d3d63980-7acf-4060-bec4-4d6b1efb2bae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotation_file = \"D:/Projects/DL/MonumentDetection/DL/keras_cv/coco-nyaptola/result.json\"\n",
-    "annotation_file = os.path.abspath(annotation_file)"
+    "annotation_file = \"coco-nyaptola/result.json\"\n",
+    "annotation_file = os.path.abspath(annotation_file)\n",
+    "output_file = \"annotations.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "db1826a9-040a-42c5-b59a-0afd8cd0a062",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "converted_annotations = load_and_convert_annotations(annotation_file,output_file)"
+   ]
   }
  ],
  "metadata": {
